--- a/playbooks/jar-deploy.yaml
+++ b/playbooks/jar-deploy.yaml
@@ -8,5 +8,5 @@
     - name: Upload JAR
       copy:
         src: ../test/myapp.jar
-        dest: /src/myapp.ar
+        dest: /src/myapp.jar
         mode: 0755
