--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,81 +19,7 @@ jobs:
       ansible: ${{ steps.changes.outputs.ansible }}
     steps:
       - name: Checkout code
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      - name: Build frontend
-        working-directory: ./frontend
-        env:
-          VITE_API_URL: http://${{ needs.deploy-infrastructure.outputs.alb-dns }}/api
-        run: npm run build
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Deploy to S3
-        run: |
-          aws s3 sync frontend/dist/ s3://${{ needs.deploy-infrastructure.outputs.s3-bucket }}/ --delete
-
-      - name: Invalidate CloudFront
-        run: |
-          # S3 버킷의 regional domain name으로 CloudFront 배포 ID 찾기
-          S3_BUCKET_DOMAIN="${{ needs.deploy-infrastructure.outputs.s3-bucket }}.s3.amazonaws.com"
-          DISTRIBUTION_ID=$(aws cloudfront list-distributions \
-            --query "DistributionList.Items[?Origins.Items[0].DomainName=='$S3_BUCKET_DOMAIN'].Id" \
-            --output text)
-          
-          if [ -n "$DISTRIBUTION_ID" ] && [ "$DISTRIBUTION_ID" != "None" ]; then
-            echo "Invalidating CloudFront distribution: $DISTRIBUTION_ID"
-            aws cloudfront create-invalidation \
-              --distribution-id $DISTRIBUTION_ID \
-              --paths "/*"
-          else
-            echo "Warning: CloudFront distribution not found for bucket domain: $S3_BUCKET_DOMAIN"
-          fi
-
-  # 배포 완료 알림
-  deployment-complete:
-    needs: [detect-changes, deploy-infrastructure, setup-servers, deploy-backend, deploy-frontend]
-    if: always()
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Deployment Summary
-        run: |
-          echo "🚀 배포 완료!"
-          echo ""
-          echo "📋 변경 감지 결과:"
-          echo "- Backend: ${{ needs.detect-changes.outputs.backend }}"
-          echo "- Frontend: ${{ needs.detect-changes.outputs.frontend }}"
-          echo "- Terraform: ${{ needs.detect-changes.outputs.terraform }}"
-          echo "- Ansible: ${{ needs.detect-changes.outputs.ansible }}"
-          echo ""
-          echo "🌐 서비스 URL:"
-          if [ -n "${{ needs.deploy-infrastructure.outputs.cloudfront-url }}" ]; then
-            echo "- Frontend: https://${{ needs.deploy-infrastructure.outputs.cloudfront-url }}"
-          fi
-          if [ -n "${{ needs.deploy-infrastructure.outputs.alb-dns }}" ]; then
-            echo "- Backend API: http://${{ needs.deploy-infrastructure.outputs.alb-dns }}/api"
-          fi
-          echo ""
-          echo "📊 배포 상태:"
-          echo "- 인프라: ${{ needs.deploy-infrastructure.result }}"
-          echo "- 서버설정: ${{ needs.setup-servers.result }}"  
-          echo "- 백엔드: ${{ needs.deploy-backend.result }}"
-          echo "- 프론트엔드: ${{ needs.deploy-frontend.result }}"checkout@v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -121,7 +47,9 @@ jobs:
       github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     outputs:
-      ec2-ip: ${{ steps.terraform.outputs.ec2-ip }}
+      ec2-id-1: ${{ steps.terraform.outputs.ec2-id-1 }}
+      ec2-id-2: ${{ steps.terraform.outputs.ec2-id-2 }}
+      alb-dns: ${{ steps.terraform.outputs.alb-dns }}
       s3-bucket: ${{ steps.terraform.outputs.s3-bucket }}
       cloudfront-url: ${{ steps.terraform.outputs.cloudfront-url }}
       db-endpoint: ${{ steps.terraform.outputs.db-endpoint }}
@@ -387,4 +315,77 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Build frontend
+        working-directory: ./frontend
+        env:
+          VITE_API_URL: http://${{ needs.deploy-infrastructure.outputs.alb-dns }}/api
+        run: npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Deploy to S3
+        run: |
+          aws s3 sync frontend/dist/ s3://${{ needs.deploy-infrastructure.outputs.s3-bucket }}/ --delete
+
+      - name: Invalidate CloudFront
+        run: |
+          # S3 버킷의 regional domain name으로 CloudFront 배포 ID 찾기
+          S3_BUCKET_DOMAIN="${{ needs.deploy-infrastructure.outputs.s3-bucket }}.s3.amazonaws.com"
+          DISTRIBUTION_ID=$(aws cloudfront list-distributions \
+            --query "DistributionList.Items[?Origins.Items[0].DomainName=='$S3_BUCKET_DOMAIN'].Id" \
+            --output text)
+          
+          if [ -n "$DISTRIBUTION_ID" ] && [ "$DISTRIBUTION_ID" != "None" ]; then
+            echo "Invalidating CloudFront distribution: $DISTRIBUTION_ID"
+            aws cloudfront create-invalidation \
+              --distribution-id $DISTRIBUTION_ID \
+              --paths "/*"
+          else
+            echo "Warning: CloudFront distribution not found for bucket domain: $S3_BUCKET_DOMAIN"
+          fi
+
+  # 배포 완료 알림
+  deployment-complete:
+    needs: [detect-changes, deploy-infrastructure, setup-servers, deploy-backend, deploy-frontend]
+    if: always()
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Deployment Summary
+        run: |
+          echo "🚀 배포 완료!"
+          echo ""
+          echo "📋 변경 감지 결과:"
+          echo "- Backend: ${{ needs.detect-changes.outputs.backend }}"
+          echo "- Frontend: ${{ needs.detect-changes.outputs.frontend }}"
+          echo "- Terraform: ${{ needs.detect-changes.outputs.terraform }}"
+          echo "- Ansible: ${{ needs.detect-changes.outputs.ansible }}"
+          echo ""
+          echo "🌐 서비스 URL:"
+          if [ -n "${{ needs.deploy-infrastructure.outputs.cloudfront-url }}" ]; then
+            echo "- Frontend: https://${{ needs.deploy-infrastructure.outputs.cloudfront-url }}"
+          fi
+          if [ -n "${{ needs.deploy-infrastructure.outputs.alb-dns }}" ]; then
+            echo "- Backend API: http://${{ needs.deploy-infrastructure.outputs.alb-dns }}/api"
+          fi
+          echo ""
+          echo "📊 배포 상태:"
+          echo "- 인프라: ${{ needs.deploy-infrastructure.result }}"
+          echo "- 서버설정: ${{ needs.setup-servers.result }}"  
+          echo "- 백엔드: ${{ needs.deploy-backend.result }}"
+          echo "- 프론트엔드: ${{ needs.deploy-frontend.result }}"
