--- a/ansible/playbooks/setup-service.yaml
+++ b/ansible/playbooks/setup-service.yaml
@@ -2,8 +2,17 @@
 - name: Setup Spring Boot Service
   hosts: webservers
 
-
   tasks:
+    - name: Create application directories
+      file:
+        path: "{{ item }}"
+        state: directory
+        mode: '0755'
+        owner: ec2-user
+        group: ec2-user
+      loop:
+        - /opt/app
+        - /opt/config
     - name: Create systemd service file                  # systemd 서비스 파일 직접 구성
       copy:
         content:  |
@@ -11,19 +20,19 @@
           Description=Spring Boot Application          # 서비스 설명
 
           [Service]
-          ExecStart=/usr/bin/java -jar /src/myapp.jar  # 실행 명령 (src는 호스트 경로)
+          ExecStart=/usr/bin/java -jar /opt/app/app.jar --spring.config.location=/opt/config/application.yml  # 실행 명령
           User=ec2-user
 
           [Install]
           WantedBy=multi-user.target                   # 부팅시 자동 시작하게
-        dest: /etc/systemd/system/myapp.service          # 서비스 파일 저장 위치
+        dest: /etc/systemd/system/voting-app.service          # 서비스 파일 저장 위치
         
     - name: Reload systemd daemon                        # systemd 데몬 리로드
       systemd:
         daemon_reload: yes                               # 새 서비스 파일 인식
 
-    - name: Start and enable service                     # 서비스 시작 및 활성화
+    - name: Enable service (don't start yet)                     # 서비스 활성화만 (시작은 jar-deploy에서)
       systemd:
-        name: myapp                                      # 서비스 명
-        state: started                                   # 즉시 시작
+        name: voting-app                                      # 서비스 명
+        state: stopped                                   # 시작하지 않음
         enabled: yes                                     # 부팅시 자동 시작 활성화
