--- a/ansible/playbooks/java-setup.yaml
+++ b/ansible/playbooks/java-setup.yaml
@@ -3,15 +3,32 @@
   hosts: webservers
   
   tasks:
-    - name: Install JDK17
-      dnf:                                          # yum 모듈 사용
-        name: java-17-amazon-corretto-devel         # 설치할 패키지
-        state: present                              # 없으면 깔고 있으면 냅둠
+    - name: Check if Java is already installed
+      command: java -version
+      register: java_check
+      failed_when: false
     
-    - name: Verify Java installation  # 디버깅용
-      command: java -version          # command모듈 사용하여 명령어 실행
-      register: java_version          # 결과를 java_version 변수에 저장
+    - name: Install JDK17 (Amazon Linux 2)
+      yum:
+        name: java-17-amazon-corretto-devel
+        state: present
+      when: 
+        - java_check.rc != 0
+        - ansible_distribution == "Amazon" and ansible_distribution_major_version == "2"
+    
+    - name: Install JDK17 (Amazon Linux 2023)
+      dnf:
+        name: java-17-amazon-corretto-devel
+        state: present
+      when: 
+        - java_check.rc != 0
+        - ansible_distribution == "Amazon" and ansible_distribution_major_version == "2023"
+    
+    - name: Verify Java installation
+      command: java -version
+      register: java_version
+      failed_when: false
    
     - name: Show Java version
-      debug:                          # dubug모듈 사용하여 결과 출력
-        var: java_version.stderr      # stdout사용하여 변수값 출력
+      debug:
+        msg: "Java version: {{ java_version.stderr_lines[0] if java_version.stderr_lines else 'Java not found' }}"
