--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,8 @@
 [webservers]
 web1 ansible_host=172.31.47.117 ansible_user=ec2-user
-# web2 ansible_host=172.31.40.58 ansible_user=ec2-user
+web2 ansible_host=172.31.40.58 ansible_user=ec2-user
+
+[webservers:vars]
+ansible_ssh_common_args='-o ProxyCommand="aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters portNumber=%p"'
+ansible_ssh_pipelining=True
+ansible_ssh_retries=3
