--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,4 @@
-- name: Debug SSM connectivity
-        run: |
-          echo "Testing SSM connectivity to instances..."
-          aws ssm describe-instance-information \
-            --filters "Key=InstanceIds,Values=${{ needs.deploy-infrastructure.outputs.ec2-id-1 }},${{ needs.deploy-infrastructure.outputs.ec2-id-2 }}" \
-            --query 'InstanceInformationList[*].[InstanceId,PingStatus,LastPingDateTime]' \
-            --output table
-
-      - name: Test direct SSM session
-        run: |
-          echo "Testing direct SSM session..."
-          timeout 10 aws ssm start-session --target ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} || echo "Direct SSM test completed"
-
-      - name: Create Ansible inventory with SSM ProxyCommand
-        working-directory: ./ansible
-        run: |
-          cat > inventory.ini << EOF
-          [webservers]
-          ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} ansible_user=ec2-user
-          ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }} ansible_user=ec2-user
-          
-          [webservers:vars]
-          ansible_connection=ssh
-          ansible_ssh_common_args='-o ProxyCommand="aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters portNumber=%p" -o ConnectTimeout=30 -o ConnectionAttempts=3'
-          ansible_ssh_private_key_file=/dev/null
-          ansible_ssh_extra_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o PasswordAuthentication=no'
-          ansible_timeout=60
-          EOF
-
-      - name: Test Ansible connectivity with verbose output
-        working-directory: ./ansible
-        run: |
-          ansible webservers -i inventory.ini -m ping -vvv || truename: Auto Deploy Pipeline
+name: Auto Deploy Pipeline
 
 on:
   push:
@@ -218,7 +186,6 @@ jobs:
         id: terraform
         working-directory: ./terraform
         run: |
-          # EC2 인스턴스 ID들과 Private IP들 가져오기
           EC2_IDS=$(terraform output -json ec2_instance_ids)
           EC2_PRIVATE_IPS=$(terraform output -json ec2_private_ips)
           
@@ -232,22 +199,19 @@ jobs:
           echo "ec2-private-ip-1=$EC2_PRIVATE_IP_1" >> $GITHUB_OUTPUT
           echo "ec2-private-ip-2=$EC2_PRIVATE_IP_2" >> $GITHUB_OUTPUT
           
-          # ALB DNS 이름 가져오기
           ALB_DNS=$(aws elbv2 describe-load-balancers --query 'LoadBalancers[0].DNSName' --output text)
           echo "alb-dns=$ALB_DNS" >> $GITHUB_OUTPUT
           
-          # S3 버킷과 DB 엔드포인트
           echo "s3-bucket=$(terraform output -raw s3_bucket_name || echo '')" >> $GITHUB_OUTPUT
           echo "db-endpoint=$(terraform output -raw rds_endpoint || echo '')" >> $GITHUB_OUTPUT
           
-          # CloudFront 도메인 가져오기
           S3_BUCKET=$(terraform output -raw s3_bucket_name || echo '')
           if [ -n "$S3_BUCKET" ]; then
             CLOUDFRONT_URL=$(aws cloudfront list-distributions --query "DistributionList.Items[?Origins.Items[0].DomainName=='$S3_BUCKET.s3.amazonaws.com'].DomainName" --output text)
             echo "cloudfront-url=$CLOUDFRONT_URL" >> $GITHUB_OUTPUT
           fi
 
-  # 서버 설정 (Ansible + SSM ProxyCommand)
+  # 서버 설정 (Ansible + SSM)
   setup-servers:
     needs: [detect-changes, deploy-infrastructure]
     if: |
@@ -268,10 +232,31 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Setup MySQL client and create database
+        run: |
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["sudo yum install -y mysql","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"CREATE DATABASE IF NOT EXISTS voting_db;\""]' \
+            --query 'Command.CommandId' --output text)
+          
+          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+
+      - name: Wait for EC2 instances to be ready
+        run: |
+          echo "Waiting for EC2 instances to be ready for SSM..."
+          sleep 120
+
       - name: Install Ansible SSM plugin
         run: |
           pip install ansible boto3
-          # Ansible SSM 컬렉션 설치
           ansible-galaxy collection install amazon.aws
 
       - name: Create Ansible inventory with SSM connection
@@ -337,9 +322,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install ansible boto3
-          # AWS CLI Session Manager Plugin 설치
-          curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"
-          sudo dpkg -i session-manager-plugin.deb
+          ansible-galaxy collection install amazon.aws
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -394,13 +377,14 @@ jobs:
         run: |
           cat > inventory.ini << EOF
           [webservers]
-          ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} ansible_user=ec2-user
-          ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }} ansible_user=ec2-user
+          ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+          ${{ needs.deploy-infrastructure.outputs.ec2-id-2 }}
           
           [webservers:vars]
-          ansible_ssh_common_args='-o ProxyCommand="aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters portNumber=%p"'
-          ansible_ssh_private_key_file=/dev/null
-          ansible_ssh_extra_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+          ansible_connection=aws_ssm
+          ansible_aws_ssm_bucket_name=${{ needs.deploy-infrastructure.outputs.s3-bucket }}
+          ansible_aws_ssm_region=${{ env.AWS_REGION }}
+          ansible_user=ec2-user
           EOF
 
       - name: Deploy JAR via Ansible
@@ -421,7 +405,6 @@ jobs:
           echo "Waiting for ALB health check..."
           sleep 30
           
-          # ALB를 통한 헬스체크
           for i in {1..10}; do
             if curl -f "http://${{ needs.deploy-infrastructure.outputs.alb-dns }}/actuator/health"; then
               echo "Application is healthy via ALB!"
