--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -239,6 +239,33 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Wait for EC2 instances to be ready for SSM
+        run: |
+          echo "Waiting for EC2 instances to be ready..."
+          
+          # EC2 인스턴스 상태 확인
+          echo "Checking EC2 instance state..."
+          aws ec2 describe-instances --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
+            --query 'Reservations[0].Instances[0].State.Name' --output text
+          
+          # SSM 에이전트 상태 확인 (최대 5분 대기)
+          for i in {1..30}; do
+            SSM_STATUS=$(aws ssm describe-instance-information \
+              --filters "Key=InstanceIds,Values=${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}" \
+              --query 'InstanceInformationList[0].PingStatus' --output text 2>/dev/null || echo "None")
+            
+            if [ "$SSM_STATUS" = "Online" ]; then
+              echo "SSM Agent is ready"
+              break
+            else
+              echo "Waiting for SSM Agent... ($i/30) - Current status: $SSM_STATUS"
+              sleep 10
+            fi
+          done
+          
+          # 추가 안전 대기
+          sleep 30
+
       - name: Setup MySQL client and create database
         run: |
           COMMAND_ID=$(aws ssm send-command \
@@ -251,8 +278,8 @@ jobs:
 
       - name: Wait for EC2 instances to be ready
         run: |
-          echo "Waiting for EC2 instances to be ready for SSM..."
-          sleep 120
+          echo "Waiting for EC2 instances to be ready for Ansible..."
+          sleep 60
 
       - name: Install Ansible SSM plugin
         run: |
